partial/force-app/main/default/objects/Countries_Setting__mdt/Countries_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Countries Setting</label>
    <pluralLabel>Countries Setting</pluralLabel>
</CustomObject>