partial/force-app/main/default/objects/Countries_Setting__mdt/fields/Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code__c</fullName>
    <label>Country ISO Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>