partial/force-app/main/default/objects/Countries_Setting__mdt/fields/Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO_Code__c</fullName>
    <label>Currency ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>