partial/force-app/main/default/objects/Countries_Setting__mdt/fields/Language_Locale_Key__c.field-meta.xml
<CustomField>
    <fullName>Language_Locale_Key__c</fullName>
    <label>Language Locale Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>