partial/force-app/main/default/objects/Countries_Setting__mdt/fields/Locale_Sid_Key__c.field-meta.xml
<CustomField>
    <fullName>Locale_Sid_Key__c</fullName>
    <label>Locale Sid Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>