partial/force-app/main/default/objects/Countries_Setting__mdt/fields/Time_Zone_Side_Key__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Side_Key__c</fullName>
    <label>Time Zone Side Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>