partial/force-app/main/default/objects/Countries_Setting__mdt/listViews/All_Custom.listView-meta.xml
<ListView>
    <fullName>All_Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Region__c</columns>
    <columns>Country_Name__c</columns>
    <columns>Country_ISO_Code__c</columns>
    <columns>Currency_ISO_Code__c</columns>
    <columns>Language_Locale_Key__c</columns>
    <columns>Locale_Sid_Key__c</columns>
    <columns>Time_Zone_Side_Key__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All (Custom)</label>
</ListView>